--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    height: 100vh;
+}
+
+/* this is from inspecting the react quill div class */
+.ql-editor{
+    font-size: 1.05rem;
+}
